--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,73 @@
 @import "tailwindcss";
 @plugin "daisyui";
 @plugin "tailwindcss-motion";
+
+@plugin "daisyui/theme" {
+  name: "light";
+  default: true;
+  prefersdark: false;
+  color-scheme: "light";
+  --color-base-100: #ffffff;
+  --color-base-200: #fdfdfe;
+  --color-base-300: #f3f9fc;
+  --color-base-content: #2b3940;
+  --color-primary: #00b074;
+  --color-primary-content: oklch(100% 0 0);
+  --color-secondary: #00b074;
+  --color-secondary-content: oklch(100% 0 0);
+  --color-accent: #00b074;
+  --color-accent-content: oklch(98% 0.016 73.684);
+  --color-neutral: #00b074;
+  --color-neutral-content: oklch(100% 0 0);
+  --color-info: #50d7e5;
+  --color-info-content: oklch(100% 0 0);
+  --color-success: oklch(76% 0.233 130.85);
+  --color-success-content: oklch(100% 0 0);
+  --color-warning: #fa5f1c;
+  --color-warning-content: oklch(100% 0 0);
+  --color-error: #f71e3f;
+  --color-error-content: oklch(100% 0 0);
+  --radius-selector: 2rem;
+  --radius-field: 0.25rem;
+  --radius-box: 0.25rem;
+  --size-selector: 0.25rem;
+  --size-field: 0.25rem;
+  --border: 1px;
+  --depth: 1;
+  --noise: 0;
+}
+
+@plugin "daisyui/theme" {
+  name: "dark";
+  default: false;
+  prefersdark: true;
+  color-scheme: "dark";
+  --color-base-100: #000000;
+  --color-base-200: #0d0d0d;
+  --color-base-300: #141414;
+  --color-base-content: oklch(100% 0 0);
+  --color-primary: #00b074;
+  --color-primary-content: oklch(100% 0 0);
+  --color-secondary: #00b074;
+  --color-secondary-content: oklch(100% 0 0);
+  --color-accent: #00b074;
+  --color-accent-content: oklch(100% 0 0);
+  --color-neutral: #00b074;
+  --color-neutral-content: oklch(100% 0 0);
+  --color-info: #50d7e5;
+  --color-info-content: oklch(100% 0 0);
+  --color-success: oklch(76% 0.233 130.85);
+  --color-success-content: oklch(100% 0 0);
+  --color-warning: #fa5f1c;
+  --color-warning-content: oklch(100% 0 0);
+  --color-error: #f71e3f;
+  --color-error-content: oklch(100% 0 0);
+  --radius-selector: 2rem;
+  --radius-field: 0.25rem;
+  --radius-box: 0.25rem;
+  --size-selector: 0.25rem;
+  --size-field: 0.25rem;
+  --border: 1px;
+  --depth: 1;
+  --noise: 0;
+}
