--- a/src/index.css
+++ b/src/index.css
@@ -1,73 +1,232 @@
 @import "tailwindcss";
-@plugin "daisyui";
+@import "tw-animate-css";
+
+@custom-variant dark (&:is(.dark *));
 @plugin "tailwindcss-motion";
 
-@plugin "daisyui/theme" {
-  name: "light";
-  default: true;
-  prefersdark: false;
-  color-scheme: "light";
-  --color-base-100: #ffffff;
-  --color-base-200: #fdfdfe;
-  --color-base-300: #f3f9fc;
-  --color-base-content: #2b3940;
-  --color-primary: #00b074;
-  --color-primary-content: oklch(100% 0 0);
-  --color-secondary: #00b074;
-  --color-secondary-content: oklch(100% 0 0);
-  --color-accent: #00b074;
-  --color-accent-content: oklch(98% 0.016 73.684);
-  --color-neutral: #00b074;
-  --color-neutral-content: oklch(100% 0 0);
-  --color-info: #50d7e5;
-  --color-info-content: oklch(100% 0 0);
-  --color-success: oklch(76% 0.233 130.85);
-  --color-success-content: oklch(100% 0 0);
-  --color-warning: #fa5f1c;
-  --color-warning-content: oklch(100% 0 0);
-  --color-error: #f71e3f;
-  --color-error-content: oklch(100% 0 0);
-  --radius-selector: 2rem;
-  --radius-field: 0.25rem;
-  --radius-box: 0.25rem;
-  --size-selector: 0.25rem;
-  --size-field: 0.25rem;
-  --border: 1px;
-  --depth: 1;
-  --noise: 0;
+@font-face {
+  font-family: "ClashDisplay-Variable";
+  src: url("assets/fonts/ClashDisplay-Variable.woff2") format("woff2"),
+    url("assets/fonts/ClashDisplay-Variable.woff") format("woff"),
+    url("assets/fonts/ClashDisplay-Variable.ttf") format("truetype");
+  font-weight: 200 700;
+  font-display: swap;
+  font-style: normal;
 }
 
-@plugin "daisyui/theme" {
-  name: "dark";
-  default: false;
-  prefersdark: true;
-  color-scheme: "dark";
-  --color-base-100: #000000;
-  --color-base-200: #0d0d0d;
-  --color-base-300: #141414;
-  --color-base-content: oklch(100% 0 0);
-  --color-primary: #00b074;
-  --color-primary-content: oklch(100% 0 0);
-  --color-secondary: #00b074;
-  --color-secondary-content: oklch(100% 0 0);
-  --color-accent: #00b074;
-  --color-accent-content: oklch(100% 0 0);
-  --color-neutral: #00b074;
-  --color-neutral-content: oklch(100% 0 0);
-  --color-info: #50d7e5;
-  --color-info-content: oklch(100% 0 0);
-  --color-success: oklch(76% 0.233 130.85);
-  --color-success-content: oklch(100% 0 0);
-  --color-warning: #fa5f1c;
-  --color-warning-content: oklch(100% 0 0);
-  --color-error: #f71e3f;
-  --color-error-content: oklch(100% 0 0);
-  --radius-selector: 2rem;
-  --radius-field: 0.25rem;
-  --radius-box: 0.25rem;
-  --size-selector: 0.25rem;
-  --size-field: 0.25rem;
-  --border: 1px;
-  --depth: 1;
-  --noise: 0;
+@font-face {
+  font-family: "Epilogue";
+  src: url("assets/fonts/Epilogue-VariableFont_wght.ttf") format("truetype");
+  font-optical-sizing: auto;
+  font-weight: 100 900;
+  font-display: swap;
+  font-style: normal;
+}
+
+:root {
+  --background: oklch(1 0 0);
+  --foreground: oklch(0.3177 0.0484 262.8625);
+  --card: oklch(1 0 0);
+  --card-foreground: oklch(0.3177 0.0484 262.8625);
+  --popover: oklch(1 0 0);
+  --popover-foreground: oklch(0.3177 0.0484 262.8625);
+  --primary: oklch(0.4894 0.2298 275.4218);
+  --primary-foreground: oklch(1 0 0);
+  --secondary: oklch(0.4894 0.2298 275.4218);
+  --secondary-foreground: oklch(1 0 0);
+  --muted: oklch(0.9439 0.0243 280.8608);
+  --muted-foreground: oklch(0.3177 0.0484 262.8625);
+  --accent: oklch(0.8585 0.0566 285.1453);
+  --accent-foreground: oklch(0.3177 0.0484 262.8625);
+  --destructive: oklch(0.6998 0.1918 30.338);
+  --destructive-foreground: oklch(1 0 0);
+  --border: oklch(0.8964 0.0206 264.4644);
+  --input: oklch(0.8964 0.0206 264.4644);
+  --ring: oklch(0.4894 0.2298 275.4218);
+  --chart-1: oklch(0.9774 0.0094 279.6919);
+  --chart-2: oklch(0.9439 0.0243 280.8608);
+  --chart-3: oklch(0.8585 0.0566 285.1453);
+  --chart-4: oklch(0.6166 0.1702 282.1247);
+  --chart-5: oklch(0.4894 0.2298 275.4218);
+  --sidebar: oklch(1 0 0);
+  --sidebar-foreground: oklch(0.3177 0.0484 262.8625);
+  --sidebar-primary: oklch(0.4894 0.2298 275.4218);
+  --sidebar-primary-foreground: oklch(1 0 0);
+  --sidebar-accent: oklch(0.8585 0.0566 285.1453);
+  --sidebar-accent-foreground: oklch(0.3177 0.0484 262.8625);
+  --sidebar-border: oklch(0.8964 0.0206 264.4644);
+  --sidebar-ring: oklch(0.4894 0.2298 275.4218);
+  --font-sans: Epilogue, ui-sans-serif, sans-serif, system-ui;
+  --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+  --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
+    "Liberation Mono", "Courier New", monospace;
+  --font-clash: "ClashDisplay-Variable", ui-sans-serif, sans-serif, system-ui;
+  --radius: 0rem;
+  --shadow-2xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
+  --shadow-xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
+  --shadow-sm: 0 1px 3px 0px hsl(0 0% 0% / 0.1),
+    0 1px 2px -1px hsl(0 0% 0% / 0.1);
+  --shadow: 0 1px 3px 0px hsl(0 0% 0% / 0.1), 0 1px 2px -1px hsl(0 0% 0% / 0.1);
+  --shadow-md: 0 1px 3px 0px hsl(0 0% 0% / 0.1),
+    0 2px 4px -1px hsl(0 0% 0% / 0.1);
+  --shadow-lg: 0 1px 3px 0px hsl(0 0% 0% / 0.1),
+    0 4px 6px -1px hsl(0 0% 0% / 0.1);
+  --shadow-xl: 0 1px 3px 0px hsl(0 0% 0% / 0.1),
+    0 8px 10px -1px hsl(0 0% 0% / 0.1);
+  --shadow-2xl: 0 1px 3px 0px hsl(0 0% 0% / 0.25);
+  --tracking-normal: 0em;
+  --spacing: 0.25rem;
+}
+
+.dark {
+  --background: oklch(0 0 0);
+  --foreground: oklch(1 0 0);
+  --card: oklch(0 0 0);
+  --card-foreground: oklch(1 0 0);
+  --popover: oklch(0 0 0);
+  --popover-foreground: oklch(1 0 0);
+  --primary: oklch(0.4894 0.2298 275.4218);
+  --primary-foreground: oklch(1 0 0);
+  --secondary: oklch(0.4894 0.2298 275.4218);
+  --secondary-foreground: oklch(1 0 0);
+  --muted: oklch(0.3177 0.0484 262.8625);
+  --muted-foreground: oklch(1 0 0);
+  --accent: oklch(0.3177 0.0484 262.8625);
+  --accent-foreground: oklch(1 0 0);
+  --destructive: oklch(0.6998 0.1918 30.338);
+  --destructive-foreground: oklch(1 0 0);
+  --border: oklch(0.1912 0.0219 263.8467);
+  --input: oklch(0.1912 0.0219 263.8467);
+  --ring: oklch(0.4894 0.2298 275.4218);
+  --chart-1: oklch(0.9774 0.0094 279.6919);
+  --chart-2: oklch(0.9439 0.0243 280.8608);
+  --chart-3: oklch(0.8585 0.0566 285.1453);
+  --chart-4: oklch(0.6166 0.1702 282.1247);
+  --chart-5: oklch(0.4894 0.2298 275.4218);
+  --sidebar: oklch(0 0 0);
+  --sidebar-foreground: oklch(1 0 0);
+  --sidebar-primary: oklch(0.4894 0.2298 275.4218);
+  --sidebar-primary-foreground: oklch(1 0 0);
+  --sidebar-accent: oklch(0.8585 0.0566 285.1453);
+  --sidebar-accent-foreground: oklch(0.3177 0.0484 262.8625);
+  --sidebar-border: oklch(0.1912 0.0219 263.8467);
+  --sidebar-ring: oklch(0.4894 0.2298 275.4218);
+  --font-sans: Epilogue, ui-sans-serif, sans-serif, system-ui;
+  --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+  --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
+    "Liberation Mono", "Courier New", monospace;
+  --font-clash: "ClashDisplay-Variable", ui-sans-serif, sans-serif, system-ui;
+  --radius: 0rem;
+  --shadow-2xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
+  --shadow-xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
+  --shadow-sm: 0 1px 3px 0px hsl(0 0% 0% / 0.1),
+    0 1px 2px -1px hsl(0 0% 0% / 0.1);
+  --shadow: 0 1px 3px 0px hsl(0 0% 0% / 0.1), 0 1px 2px -1px hsl(0 0% 0% / 0.1);
+  --shadow-md: 0 1px 3px 0px hsl(0 0% 0% / 0.1),
+    0 2px 4px -1px hsl(0 0% 0% / 0.1);
+  --shadow-lg: 0 1px 3px 0px hsl(0 0% 0% / 0.1),
+    0 4px 6px -1px hsl(0 0% 0% / 0.1);
+  --shadow-xl: 0 1px 3px 0px hsl(0 0% 0% / 0.1),
+    0 8px 10px -1px hsl(0 0% 0% / 0.1);
+  --shadow-2xl: 0 1px 3px 0px hsl(0 0% 0% / 0.25);
+}
+
+@theme inline {
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
+  --color-card: var(--card);
+  --color-card-foreground: var(--card-foreground);
+  --color-popover: var(--popover);
+  --color-popover-foreground: var(--popover-foreground);
+  --color-primary: var(--primary);
+  --color-primary-foreground: var(--primary-foreground);
+  --color-secondary: var(--secondary);
+  --color-secondary-foreground: var(--secondary-foreground);
+  --color-muted: var(--muted);
+  --color-muted-foreground: var(--muted-foreground);
+  --color-accent: var(--accent);
+  --color-accent-foreground: var(--accent-foreground);
+  --color-destructive: var(--destructive);
+  --color-destructive-foreground: var(--destructive-foreground);
+  --color-border: var(--border);
+  --color-input: var(--input);
+  --color-ring: var(--ring);
+  --color-chart-1: var(--chart-1);
+  --color-chart-2: var(--chart-2);
+  --color-chart-3: var(--chart-3);
+  --color-chart-4: var(--chart-4);
+  --color-chart-5: var(--chart-5);
+  --color-sidebar: var(--sidebar);
+  --color-sidebar-foreground: var(--sidebar-foreground);
+  --color-sidebar-primary: var(--sidebar-primary);
+  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+  --color-sidebar-accent: var(--sidebar-accent);
+  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+  --color-sidebar-border: var(--sidebar-border);
+  --color-sidebar-ring: var(--sidebar-ring);
+
+  --font-sans: var(--font-sans);
+  --font-mono: var(--font-mono);
+  --font-serif: var(--font-serif);
+  --font-clash: var(--font-clash);
+
+  --radius-sm: calc(var(--radius) - 4px);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-lg: var(--radius);
+  --radius-xl: calc(var(--radius) + 4px);
+
+  --shadow-2xs: var(--shadow-2xs);
+  --shadow-xs: var(--shadow-xs);
+  --shadow-sm: var(--shadow-sm);
+  --shadow: var(--shadow);
+  --shadow-md: var(--shadow-md);
+  --shadow-lg: var(--shadow-lg);
+  --shadow-xl: var(--shadow-xl);
+  --shadow-2xl: var(--shadow-2xl);
+}
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+  h1, h2, h3, h4 {
+    @apply font-clash;
+  }
+  h1 {
+    @apply scroll-m-20 text-4xl font-extrabold tracking-tight lg:text-5xl;
+  }
+  h2 {
+    @apply scroll-m-20 border-b pb-2 text-3xl font-semibold tracking-tight transition-colors first:mt-0;
+  }
+  h3 {
+    @apply scroll-m-20 text-2xl font-semibold tracking-tight;
+  }
+  h4 {
+    @apply scroll-m-20 text-xl font-semibold tracking-tight;
+  }
+  p {
+    @apply leading-7 [&:not(:first-child)]:mt-6;
+  }
+  blockquote {
+    @apply mt-6 border-l-2 pl-6 italic;
+  }
+  ul {
+    @apply my-6 ml-6 list-disc [&>li]:mt-2;
+  }
+  code {
+    @apply bg-muted relative rounded px-[0.3rem] py-[0.2rem] font-mono text-sm font-semibold;
+  }
+}
+
+*::selection {
+  background-color: var(--chart-4);
+  color: var(--primary-foreground);
+}
+
+*::-moz-selection {
+  background-color: var(--chart-4);
+  color: var(--primary-foreground);
 }
